--- a/db-migrations/src/main/resources/liquibase.properties
+++ b/db-migrations/src/main/resources/liquibase.properties
@@ -1,6 +1,6 @@
 changeLogFile=db.changelog-master.yaml
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/populacao?createDatabaseIfNotExist=true
+url=jdbc:mysql://mysqldb:3306/populacao?createDatabaseIfNotExist=true
 username=root
 password=admin
 verbose=true 
